Fixed collapsed titles moving on window resize in cultural influences:

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -656,7 +656,7 @@
 
  .collapsed-desc h1 {
    margin: 0 !important;
-   padding-top: 3%;
+   padding-top: 1.5rem;
  }
 
  .collapsed-content {
